k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    env: staging
    app.kubernetes.io/managed-by: kubectl
